syntax = "proto3";
option java_multiple_files =  true;

package org.example.pingpong;

message PingPongRequest {
  string message = 1;
}

message PingPongResponse {
  string message = 1;
}

service PingPongService {
  rpc pingPong(PingPongRequest) returns (PingPongResponse);
}
